# llama-crab-examples

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh
chat/: Cargo.toml  README.md
chat/src/: main.rs
embedding_search/: Cargo.toml  README.md
embedding_search/src/: main.rs
embeddings/: Cargo.toml  README.md
embeddings/src/: main.rs
lfm_vl_vision/: Cargo.toml  README.md
lfm_vl_vision/src/: main.rs
mtmd/: Cargo.toml  README.md
mtmd/src/: hf_helper.rs  main.rs
quickstart/: Cargo.toml  README.md
quickstart/src/: main.rs
reranker/: Cargo.toml  README.md
reranker/src/: main.rs
scripts/: download_models.sh
server_lfm/: Cargo.toml  README.md
server_lfm/src/: main.rs
simple/: Cargo.toml  README.md
simple/src/: main.rs
speculative/: Cargo.toml  README.md
speculative/src/: main.rs
stateful_chat/: Cargo.toml  README.md
stateful_chat/src/: main.rs
streaming/: Cargo.toml  README.md
streaming/src/: main.rs
structured/: Cargo.toml  README.md
structured/src/: main.rs
tauri-chat-lfm/: README.md  index.html  package.json  vite.config.ts
tauri-chat-lfm/src/: main.ts  styles.css
tauri-chat-lfm/src-tauri/: Cargo.toml  tauri.conf.json
tauri-chat-lfm/src-tauri/capabilities/: default.json
tauri-chat-lfm/src-tauri/src/: lib.rs  main.rs
tests/: examples_repo_smoke.sh
tools/: Cargo.toml  README.md
tools/src/: main.rs
vision/: Cargo.toml  README.md
vision/src/: main.rs
