[workspace]
resolver = "2"
members = [
    "quickstart",
    "stateful_chat",
    "embedding_search",
    "simple",
    "streaming",
    "chat",
    "embeddings",
    "reranker",
    "speculative",
    "tools",
    "structured",
    "mtmd",
    "vision",
    "lfm_vl_vision",
    "server_lfm",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/DominguesM/llama-crab-examples"

[workspace.dependencies]
# Pinned to the latest published llama-crab. The `hf-hub` feature lets
# `Llama::load` resolve Hugging Face repo ids and download the GGUF
# automatically on first run, which is the path the examples take.
#
# The `common` feature is required by `LlamaSampler::grammar`
# (gated behind `llguidance`); the `structured` example turns it on
# locally.
#
# The vision examples (`mtmd`, `vision`, `lfm_vl_vision`) layer
# `features = ["mtmd"]` on top to enable multimodal inference.
llama-crab = { version = "0.1.6", default-features = false, features = ["openmp", "hf-hub", "common"] }

# Direct `hf-hub` dep used to download the mmproj projector files for
# the vision examples — `llama-crab` only resolves the text GGUF
# through HF Hub, so the mmproj has to be fetched separately.
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls"] }
