[package]
name = "reranker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "reranker"
path = "src/main.rs"

[dependencies]
llama-crab.workspace = true
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
