[package]
name = "vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "vision"
path = "src/main.rs"

[dependencies]
llama-crab = { workspace = true, features = ["mtmd"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
