[package]
name = "vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "vision"
path = "src/main.rs"

[dependencies]
# The `mtmd` feature pulls in llama.cpp's mtmd backend so the example
# can do multimodal inference.
llama-crab = { workspace = true, features = ["mtmd"] }
hf-hub.workspace = true
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
