[package]
name = "tauri-chat-lfm"
version = "0.2.0"
description = "llama-crab Tauri chat example for LiquidAI LFM2.5 350M"
authors = ["llama-crab contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_chat_lfm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# `tauri-plugin-llama-crab` now enables the `hf-hub` feature of
# `llama-crab` by default, so the Rust side can resolve the HF repo
# id directly through `load_model` without an extra download step.
tauri-plugin-llama-crab = "0.1.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
